--- a/src/index.css
+++ b/src/index.css
@@ -467,7 +467,13 @@
         color: var(--color-text-primary);
         margin-bottom: 1rem;
     }
-
+    .service-heading-32 {
+        font-weight: 600;
+        font-size: 28px;
+        line-height: 1.3;
+        color: var(--color-text-primary);
+        margin-bottom: 1rem;
+    }
     .service-body-text {
         font-weight: 400;
         font-size: 22px;
