--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,30 @@
     }
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
+/* index.css */
+.custom-scrollbar::-webkit-scrollbar {
+    width: 8px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+    background: linear-gradient(#604CC3, #2E245D);
+    border-radius: 9999px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+.custom-scrollbar {
+    scrollbar-width: thin;
+    scrollbar-color: #604CC3 #ffffff; /* For Firefox */
+}
+
+
 /* =============================================================================
    COMPONENT STYLES
    ============================================================================= */
